<resources>
    <string name="app_name">Kamu_Kamu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="kamu_kamu">Kamu Kamu</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="continuebtn">CONTINUE</string>
    <string name="accept_our_terms_and_conditions">Accept our terms and conditions</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="please_login">Please Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginBtnLabel">Login</string>
    <string name="new_user_signup">New User? <b>SignUp</b></string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="email_input_label01">Email</string>
    <string name="password_input_label01">Password</string>
    <string name="confirm_password_input_label01">Confirm Password</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="abc_exaample_com">abc@exaample.com</string>
    <string name="add_category">Add Category</string>
    <string name="submit">Submit</string>
    <string name="category_title">Category Title</string>
    <string name="category_title_02">Category Title</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="search_02">Search</string>
    <string name="recipe">Recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>