<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg_dark"
    tools:context=".Get_Started">

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="match_parent"
        android:layout_height="299dp"
        android:layout_alignParentTop="true"

        android:layout_alignParentBottom="true"
        android:layout_marginTop="431dp"
        android:layout_marginBottom="1dp"
        android:src="@drawable/white_bg_get_started" />

    <TextView
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconIv"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="-270dp"
        android:layout_marginEnd="35dp"
        android:text="@string/let_s_get_started"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/continuebtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/shape_button01"
        android:text="@string/continuebtn"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="51dp"
        android:text="@string/accept_our_terms_and_conditions" />


</RelativeLayout>