<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg_dark"
    tools:context=".activities.LoginActivity">

<!--    Toolbar-->

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo_mad"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/please_login"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="28sp"/>






    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            Email-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"/>


            </com.google.android.material.textfield.TextInputLayout>

<!--                password-->


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"/>


            </com.google.android.material.textfield.TextInputLayout>


<!--            Forgot Password-->

            <TextView
                android:id="@+id/forgotTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />


<!--            Login button-->

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotTv"
                android:text="@string/loginBtnLabel"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:textColor="@color/white"/>


        </RelativeLayout>


    </ScrollView>

<!--    No account register-->

    <TextView
        android:id="@+id/noAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/new_user_signup"
        android:textColor="@color/white"/>



</RelativeLayout>