<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbg"
    tools:context=".DashBoardAdminActivity">

    <!--    Toolbox-->

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/dashboard_admin"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/subtitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/titleTv"
            android:text="@string/abc_exaample_com"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_logout_white"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"/>


    </RelativeLayout>

<!--    Bottom layout-->

    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

<!--        Add Category-->
        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_button01"
            android:minHeight="50dp"
            android:text="@string/add_category"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

<!--        Add recipe-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addRecipeFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/goldenBrown"
            app:fabCustomSize="50dp"
            android:src="@drawable/ic_recipe_white"
            app:tint="@color/white"/>

    </LinearLayout>

</RelativeLayout>